--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                 <h2>Congratulations! </h2>
                 <a class="close" href=# >×</a>
                 <div class="content-1">
-                    Congratulations you won!
+                    Congratulations you're a winner!!
                 </div>
                 <div class="content-2">
                     <p>You made <span id=finalMove> </span> moves </p>
